[package]
name = "stellar-relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "stellar_relay"
path = "src/lib.rs"

[[bin]]
name = "example"
path = "src/bin/example.rs"

[dependencies]
env_logger = "0.9.0"
log = "0.4.17"

thiserror = "1.0"
base64 = "0.13.0"
rand = "0.8.5"
tweetnacl = "0.4.0"

hmac = "0.12.1"
sha2 = "0.10.2"

serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
serde_json = {version = '1.0.45'}

substrate-stellar-sdk = {git = "https://github.com/pendulum-chain/substrate-stellar-sdk", branch = "master", default-features = false, features = ['all-types']}

tokio = { version = "1.0", features = ["full"] }
err-derive = "0.3.1"

[features]
default = []